[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/characters/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/blue-snake/slither-01.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/blue-snake/bite-01.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/blue-snake/bite-02.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/blue-snake/bite-03.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/blue-snake/bite-04.png" type="Texture" id=6]
[ext_resource path="res://assets/enemies/blue-snake/slither-02.png" type="Texture" id=7]
[ext_resource path="res://assets/enemies/blue-snake/slither-03.png" type="Texture" id=8]
[ext_resource path="res://assets/enemies/blue-snake/slither-04.png" type="Texture" id=9]
[ext_resource path="res://assets/enemies/blue-snake/slither-05.png" type="Texture" id=10]
[ext_resource path="res://assets/enemies/blue-snake/slither-06.png" type="Texture" id=11]
[ext_resource path="res://scenes/hud/Health.tscn" type="PackedScene" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "move",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.30244, 4.39346 )

[node name="Enemy" type="KinematicBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 3
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="Position" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 13, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]

[node name="AttackRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AggroCooldown" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 12 )]
position = Vector2( -28.884, -32.1132 )

[connection signal="change_health" from="." to="HUD" method="change_health"]
[connection signal="change_health" from="." to="." method="change_health"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_AttackRadius_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="AggroCooldown" to="." method="_on_AggroCooldown_timeout"]
